[gd_scene load_steps=3 format=3 uid="uid://djqhknww5vwgg"]

[ext_resource type="Script" uid="uid://xaktpsyssoph" path="res://UI/Menu/Main/main_menu.gd" id="1_21qks"]
[ext_resource type="Theme" uid="uid://cp68w82wv11hv" path="res://UI/Themes/menu_theme.tres" id="1_wrnbp"]

[node name="MainMenu" type="CenterContainer" node_paths=PackedStringArray("new_game")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 1.0
offset_right = 6.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21qks")
new_game = NodePath("PanelContainer/VBoxContainer/NewGame")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("1_wrnbp")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_wrnbp")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wrnbp")
text = "Main Menu"
horizontal_alignment = 1
uppercase = true

[node name="NewGame" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_wrnbp")
text = "New Game"

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_wrnbp")
text = "Continue"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_wrnbp")
text = "Settings"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_wrnbp")
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
